# Trading_app

./: README.md  package-lock.json
.github/workflows/: codeql.yml  pylint.yml
Backend-fast-api/: .env  alembic.ini  app.log.2025-04-16  app.log.2025-05-23  app.log.2025-05-24  app.log.2025-05-25  app.log.2025-05-26  app.log.2025-05-28  app.log.2025-06-02  app.log.2025-06-04  app.log.2025-06-05  app.log.2025-06-14  app.log.2025-06-15  app.log.2025-06-17  app.log.2025-06-26  requirements.txt
Backend-fast-api/alembic/: env.py
Backend-fast-api/app/: auth.py  config.py  database.py  logger.py  main.py  models.py  schemas.py
Backend-fast-api/app/api/: auth.py  deps.py  profile.py  stall.py  stock.py
Backend-fast-api/app/core/: config.py  security.py
Backend-fast-api/app/crud/: auth.py  profile.py  stall.py  stock.py  users.py
Backend-fast-api/app/db/: session.py
Backend-fast-api/app/models/: __init__.py  contact.py  flower.py  order.py  payment.py  roles.py  stall.py  stock.py  users.py
Backend-fast-api/app/schemas/: auth.py  profile.py  stall.py  stock.py  users.py
Backend-fast-api/db Scripts/: my_flower_market.sql
Database/: 001_init_my_flower_market.sql  db.sql  db_new.sql  db_new_2.0.sql  db_new_3.0.sql
Notes/: Colors.txt  Database_designing.txt  Folder Structure Backend.txt  Improvements.txt  Profile page.txt  toDo_11_4_2025.txt
backend/: CMakeLists.txt
backend/include/routes/: auth_router.h  database_route.h  home_route.h  order_router.h  profile_router.h  stock_router.h
backend/src/: main.cpp
backend/src/routes/: auth_router.cpp  database_route.cpp  home_route.cpp  order_router.cpp  profile_router.cpp  stock_router.cpp
react-frontend/: .gitignore  package-lock.json  package.json
react-frontend/public/: index.html
react-frontend/src/: App.jsx
react-frontend/src/api/: auth.js  axiosInstance.js  order.js  profile.js  stall.js  stock.js
react-frontend/src/assets/: assets.js
react-frontend/src/components/AddStall/: AddStall.css  AddStall.jsx
react-frontend/src/components/Dashboard/: Dashboard.css  Dashboard.jsx
react-frontend/src/components/Footer/: Footer.css  Footer.jsx
react-frontend/src/components/Header/: Header.css  Header.jsx
react-frontend/src/components/MyStalls_AllStalls/: AllStall.jsx  MyStall.css  MyStalls.jsx
react-frontend/src/components/NavBar/: NavBar.css  NavBar.jsx
react-frontend/src/components/NewArrival/: NewArrival.css  NewArrival.jsx
react-frontend/src/components/OrderForm/: OrderForm.css  OrderForm.jsx
react-frontend/src/components/ProfileAvatar/: ProfileAvatar.jsx
react-frontend/src/components/ProfileLeft/: ProfileLeft.css  ProfileLeft.jsx
react-frontend/src/components/Stall/: Stall.css  Stall.jsx
react-frontend/src/components/Stock/: Stock.css  Stock.jsx
react-frontend/src/components/StockForm/: StockForm.css  StockForm.jsx
react-frontend/src/components/StocksOnSale/: StocksOnSale.css  StocksOnSale.jsx
react-frontend/src/hooks/: usernameAvailability.js
react-frontend/src/pages/Home/: Home.jsx
react-frontend/src/pages/Login/: Login.css  Login.jsx
react-frontend/src/pages/Market/: Market.css  Market.jsx
react-frontend/src/pages/OrderPage/: OrderPage.css  OrderPage.jsx
react-frontend/src/pages/PaymentPage/: PaymentPage.css  PaymentPage.jsx
react-frontend/src/pages/Profile/: Profile.css  Profile.jsx
react-frontend/src/pages/SignUp/: SignUp.css  SignUp.jsx
